--- a/myapp/angular.json
+++ b/myapp/angular.json
@@ -3,21 +3,17 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "course-app": {
+    "myapp": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "c",
-      "schematics": {
-        "@schematics/angular:component": {
-          "styleext": "scss"
-        }
-      },
+      "prefix": "app",
+      "schematics": {},
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/course-app",
+            "outputPath": "dist/myapp",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -27,7 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.css"
             ],
             "scripts": []
           },
@@ -61,18 +57,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "course-app:build"
+            "browserTarget": "myapp:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "course-app:build:production"
+              "browserTarget": "myapp:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "course-app:build"
+            "browserTarget": "myapp:build"
           }
         },
         "test": {
@@ -83,7 +79,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.scss"
+              "src/styles.css"
             ],
             "scripts": [],
             "assets": [
@@ -106,7 +102,7 @@
         }
       }
     },
-    "course-app-e2e": {
+    "myapp-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -115,11 +111,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "course-app:serve"
+            "devServerTarget": "myapp:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "course-app:serve:production"
+              "devServerTarget": "myapp:serve:production"
             }
           }
         },
@@ -135,5 +131,5 @@
       }
     }
   },
-  "defaultProject": "course-app"
+  "defaultProject": "myapp"
 }
