--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "course-app",
+  "name": "myapp",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
-    "@angular/cli": "~7.2.1",
+    "@angular/cli": "~7.2.2",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/node": "~8.9.4",
